[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/duct_tape.png" type="Texture" id=2]
[ext_resource path="res://DuctTapeReady.gd" type="Script" id=3]
[ext_resource path="res://sprites/tiles/cooldown_mask.png" type="Texture" id=4]
[ext_resource path="res://sprites/wall_brace.png" type="Texture" id=5]
[ext_resource path="res://CementReady.gd" type="Script" id=6]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ScoreTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ScoreLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -491.0
margin_top = 15.0
margin_right = -427.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Time: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="DuctTapeReady" type="Sprite" parent="." index="2"]

position = Vector2( 477.053, 528.818 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="CooldownMask" type="Sprite" parent="DuctTapeReady" index="0"]

visible = false
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CementReady" type="Sprite" parent="." index="3"]

position = Vector2( 564.222, 527.591 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CooldownMask" type="Sprite" parent="CementReady" index="0"]

visible = false
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="DuctTapeLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 353.0
margin_top = 519.0
margin_right = 440.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Left Mouse Duct Tape"
align = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="CementLabel" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 604.0
margin_top = 518.0
margin_right = 696.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Right Mouse Wall Brace"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[connection signal="update_cement_cooldown" from="." to="CementReady" method="_on_HUD_update_cement_cooldown"]

[connection signal="update_duct_tape_cooldown" from="." to="DuctTapeReady" method="_on_HUD_update_duct_tape_cooldown"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]


